# yt-list-manager

./: .gitignore  CLAUDE.md  Makefile  yt-list-manager-backlog.md
backend/: .env.example  pyproject.toml
backend/app/: auth.py  database.py  main.py  models.py  youtube.py
backend/app/routes/: auth.py  playlists.py  sync.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.svelte  app.css
frontend/src/components/: BulkActions.svelte  ConfirmDialog.svelte  MergeWizard.svelte  OverlapMatrix.svelte  PlaylistCard.svelte  Sidebar.svelte  Toast.svelte  VideoCard.svelte  VideoRow.svelte
frontend/src/lib/: api.ts  stores.ts  types.ts
frontend/src/pages/: Dashboard.svelte  Overlaps.svelte  PlaylistDetail.svelte
